# ORM_Benchmarks

./: .gitignore  LICENSE  pyproject.toml  schema.sql
peewee/: about.md
prisma/: about.md  main.py  schema.prisma
sqlalchemy/: main.py  models.py
